<resources>
    <string name="app_name">BalinaSoftTest</string>
    <string name="email">Email</string>
    <string name="email_hint"><font size="14">введите email</font></string>
    <string name="password">Пароль</string>
    <string name="password_hint">введите пароль</string>
    <string name="registration">Регистрация</string>
    <string name="unknown_error">Неизвестная ошибка!</string>
    <string name="no_network">Отсутсвует подключение к интернету</string>
    <string name="email_is_empty">Заполните поле \"Email\"</string>
    <string name="email_contains_not_right_domain">В адресе электронной почты указан недейтсвительный домен</string>
    <string name="password_is_empty">Заполните поле \"Пароль\"</string>
    <string name="password_is_not_valid">Пароль должен содержать от 8 до 30 символов</string>
    <string name="email_has_incorrect_format">Введён неверный формат адреса электронной почты</string>
    <string name="logo">логотип</string>

    <string-array name="popular_domains">
        <item>\@gmail.com</item>
        <item>\@gmail.co.ua</item>
        <item>\@mail.com</item>
        <item>\@mail.ru</item>
        <item>\@yandex.ru</item>
        <item>\@yandex.by</item>
        <item>\@ya.ru</item>
        <item>\@yahoo.com</item>
        <item>\@tut.by</item>
        <item>\@hotmail.com</item>
        <item>\@balinasoft.com</item>
    </string-array>
</resources>
